--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,10 @@
 body {
 	letter-spacing: 1px;
+	background-color: #232323;
+	color: #ffffff;
+	line-height: 2.0;
 }
 .container-fluid {
-	max-width: 900px;
 	margin: auto;
 }
 .fsize120 {
@@ -14,11 +16,16 @@ body {
 a {
 	color: #00a1b3;
 }
+a:hover {
+	font-size: 105%;
+}
 iframe {
 	-moz-transform: scale(1,1);
--webkit-transform: scale(1,1);
--o-transform: scale(1,1);
--ms-transform: scale(1,1);
+	-webkit-transform: scale(1,1);
+	-o-transform: scale(1,1);
+	-ms-transform: scale(1,1);
+	width: 100%;
+	height: 300px;
 }
 ul,li {
 	margin: 0;
